--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,9 +4,11 @@
   box-sizing: border-box;
 }
 
-a {
+li {
   color: #fff;
   text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
 }
 .nav-container {
   display: flex;
@@ -14,25 +16,32 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 1% 3%;
+  height: 60px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 999999;
 }
 
 .nav-link {
   display: flex;
-  font-family: "Poppins", sans-serif;
+  font-family: "Open Sans", sans-serif;
   list-style: none;
   font-size: 12px;
   justify-content: space-between;
+  align-items: center;
   width: 30%;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .nav-btn {
   display: flex;
   justify-content: space-between;
-  width: 12%;
-}
-
-.btnLogin {
-  border: 10px solid red;
-  background: blue;
-  color: white;
+  align-items: center;
+  width: 15%;
 }
