--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -3,7 +3,10 @@
   border: none;
   border-radius: 5px;
   padding: 4px 14px;
-  font-size: 10px;
+  font-size: 14px;
+  color: #24633d;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
 }
 
 .btn-signup {
@@ -11,18 +14,26 @@
   border: none;
   border-radius: 5px;
   padding: 4px 16px;
-  font-size: 12px;
+  font-size: 16px;
   color: #f7f7fc;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
 }
 
 .btn-started {
-  margin-top: 1rem;
+  margin-top: 2rem;
   background: #00c14d;
   border: none;
   border-radius: 5px;
-  padding: 8px 48px;
-  font-size: 14px;
+  padding: 10px 48px;
   color: #f7f7fc;
+  font-family: "Montserrat";
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 
 .create-account {
