--- a/src/Components/Carousel/Slide.css
+++ b/src/Components/Carousel/Slide.css
@@ -19,7 +19,7 @@
   opacity: 0.3;
 }
 
-img {
+.slider img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -37,15 +37,26 @@ img {
 
 .main-text h2 {
   padding-bottom: 3rem;
-  font-weight: 700;
-  font-size: 32px;
-  width: 50%;
+  margin-top: 190px;
+  width: 500px;
+  height: 107px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 54px;
 }
 
 .main-text p {
+  margin-top:20px;
   font-size: 18px;
   font-weight: 300;
-  width: 45%;
+  width: 431px;
+  height: 54px;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 27px;
 }
 
 .footer-text p {
