--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,27 +1,50 @@
 .header-container {
   background: linear-gradient(236.07deg, #24633d 24.61%, #c5822c 98.64%);
-  height: 92vh;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 
 .header-content {
   position: absolute;
-  width: 534px;
   height: 348px;
+  width: 663px;
   left: 122px;
   top: 180px;
+  margin-bottom: 20px;
+  z-index: 100;
 }
 
-.header-text {
-  font-family: "Inter", sans-serif;
+.header-text p {
+  color: #fff;
+  font-family: "Open Sans";
+  font-size: 20px;
   font-style: normal;
-  font-weight: 100;
-  font-size: 28px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-top: 1rem;
+  height: 54px;
+  width: 464px;
+  left: 0px;
+  top: 290px;
+}
+
+.header-text h1 {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 600;
   line-height: 87px;
   color: #fff;
+  font-size: 64px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .header-image {
   position: absolute;
-  left: 330px;
-  top: -175px;
+  left: 40px;
+  top: -184px;
+  z-index: -100;
 }
