--- a/src/Components/Insight/Insight.css
+++ b/src/Components/Insight/Insight.css
@@ -25,24 +25,25 @@
   font-weight: 600;
   margin-bottom: 1rem;
   font-family: "Montserrat", sans-serif;
-}
 
-.insight-content-text p {
-  color: #303030;
-  font-size: 12px;
+  font-size: 21px;
   font-style: normal;
-  font-weight: 300;
-  margin-bottom: 1rem;
-  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .insight-content-text li {
   color: #303030;
-  font-size: 12px;
   font-style: normal;
   font-weight: 300;
   margin-bottom: 1rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  list-style: disc;
 }
-
-
