--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 20px 40px;
+  color: #000;
 }
 
 .login-form-header {
@@ -45,7 +46,7 @@ label {
   font-family: "Open Sans", sans-serif;
 }
 
-input {
+.input {
   width: 100%;
   background: #eff0f7;
   border-radius: 16px;
@@ -55,7 +56,7 @@ input {
   padding: 0 20px;
 }
 
-input::placeholder {
+.input::placeholder {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-style: normal;
