--- a/src/Components/SignUp/SignUpScreen.css
+++ b/src/Components/SignUp/SignUpScreen.css
@@ -1,10 +1,12 @@
 .signup-screen-container {
   display: flex;
+  width: 100%;
 }
 
 .carousel-container {
   width: 65%;
   height: 100%;
+  flex: 1;
 }
 
 .signup-screen-text {
@@ -13,13 +15,18 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  flex: 0 0 35%;
 }
 
-.arrow {
+.signup-screen-text .arrow {
+  width: 50px;
   position: absolute;
-  top: 50px;
-  left: 50px;
+  top: 30px;
+  right: 30px;
+}
+
+.fa-arrow-left {
+  color: black;
 }
 
 .signup-text p {
