--- a/src/Components/AdminBoard/Analysis/Analysis.css
+++ b/src/Components/AdminBoard/Analysis/Analysis.css
@@ -4,7 +4,6 @@ body {
 
 .analysis-form-container {
   width: 926px;
-  height: 2421px;
   background: #ffffff;
   border-radius: 16px;
   padding: 5%;
@@ -91,4 +90,8 @@ body {
   width: 390px;
   height: 57px;
   margin-right: 20px;
+}
+
+.analysis-form-container small {
+  font-size: 12px;
 }
