--- a/src/Components/AdminBoard/Dashboard/DashBoardPage.css
+++ b/src/Components/AdminBoard/Dashboard/DashBoardPage.css
@@ -1,7 +1,6 @@
 .dashboard-container {
-  padding: 0 10%;
+  padding: 20px 50px;
 }
-
 .dashboard-container .welcome {
   width: 195px;
   font-family: "Montserrat";
@@ -12,7 +11,7 @@
   align-items: center;
   text-align: center;
   color: #24633d;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .dashboard-container h2 {
@@ -26,17 +25,19 @@
 }
 
 .info-1-container {
-  margin-top: 30px;
+  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  height: 200px;
 }
 
 .total-balance {
   background: #ecf5eb;
   border-radius: 16px;
-  width: 458px;
-  height: 250px;
+  width: 438px;
+  height: 200px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -71,7 +72,7 @@
 }
 
 .total-balance-pie-chart {
-  width: 48%;
+  width: 40%;
 }
 
 .total-balance-pie-chart p {
@@ -89,14 +90,15 @@
   font-size: 16px;
   line-height: 22px;
   color: #303030;
+  margin-bottom: 20px;
 }
 
 .overdue-loans-table {
   background: #ecf5eb;
   border-radius: 16px;
-  width: 458px;
-  height: 250px;
-  padding: 10% 8%;
+  width: 438px;
+  height: 200px;
+  padding: 4% 4%;
 }
 
 .overdue-loans-table th {
@@ -112,7 +114,6 @@
 
 .overdue-loans-table tr {
   text-align: left;
-
   font-family: "Montserrat";
   font-style: normal;
   font-weight: normal;
@@ -127,7 +128,7 @@
 .info-2-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 30px;
 }
 
@@ -141,5 +142,9 @@
 }
 
 .line-chart {
-  width: 500px;
+  width: 438px;
+  background: #ecf5eb;
+  padding: 20px;
+  border-radius: 16px;
+  height: 350px;
 }
