--- a/src/Components/AdminBoard/Dashboard/Dashboard.css
+++ b/src/Components/AdminBoard/Dashboard/Dashboard.css
@@ -1,1 +1,21 @@
+.dashboard-container-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
 
+.predicta-main {
+  width: 80%;
+  height: 100%;
+  margin-left: 20%;
+}
+
+.predicta-sidebar {
+  width: 20%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+}
