--- a/src/Components/AdminBoard/Analysis/Analysis.css
+++ b/src/Components/AdminBoard/Analysis/Analysis.css
@@ -63,6 +63,15 @@ body {
   height: 57px;
   margin-right: 20px;
 }
+.analysis-form .form-control select {
+  background: #ffffff;
+  border: 1px solid #9a9a9a;
+  padding-left: 20px;
+  border-radius: 8px;
+  width: 390px;
+  height: 57px;
+  margin-right: 20px;
+}
 
 .analysis-form .month-control {
   padding: 30px 0;
@@ -83,6 +92,16 @@ body {
 }
 
 .analysis-form .month-control input {
+  background: #ffffff;
+  border: 1px solid #9a9a9a;
+  padding-left: 20px;
+  border-radius: 8px;
+  width: 390px;
+  height: 57px;
+  margin-right: 20px;
+}
+
+.analysis-form .month-control select {
   background: #ffffff;
   border: 1px solid #9a9a9a;
   padding-left: 20px;
