--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -7,6 +7,7 @@
   color: #24633d;
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
+  cursor: pointer;
 }
 
 .btn-signup {
@@ -18,6 +19,7 @@
   color: #f7f7fc;
   font-weight: 600;
   font-family: "Open Sans", sans-serif;
+  cursor: pointer
 }
 
 .btn-started {
@@ -34,6 +36,7 @@
   line-height: 26px;
   letter-spacing: 0em;
   text-align: center;
+  cursor: pointer;
 }
 
 .create-account {
@@ -43,6 +46,7 @@
   padding: 14px 74px;
   color: #fff;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .signin-account {
@@ -52,6 +56,7 @@
   border-radius: 5px;
   padding: 12px 46px;
   font-size: 16px;
+  cursor:pointer;
 }
 
 .signup {
@@ -65,6 +70,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .login {
@@ -78,6 +84,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .analysis-form-btn {
@@ -94,4 +101,5 @@
   padding: 10px 0;
   border: none;
   margin-top: 20px;
+  cursor: pointer;
 }
