--- a/src/Components/AdminBoard/Dashboard/Dashboard.css
+++ b/src/Components/AdminBoard/Dashboard/Dashboard.css
@@ -1,6 +1,6 @@
 .dashboard-container-main {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
   height: 100vh;
