--- a/src/Components/AdminBoard/SideMenu/SideMenu.css
+++ b/src/Components/AdminBoard/SideMenu/SideMenu.css
@@ -2,6 +2,7 @@
   background: #ecf5eb;
   box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.15);
   height: 100vh;
+  width: 20%;
 }
 
 .side-menu-item-container {
