--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -45,3 +45,11 @@ a {
   align-items: center;
   width: 15%;
 }
+
+.profile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 8%;
+  
+}
